# rust-templates

./: .gitignore  README.md  cargo-generate.toml
.github/: dependabot.yml
.github/workflows/: build.yml
actions/: Cargo.toml  Containerfile  Dockerfile  README.md  action.yml  build.Dockerfile
actions/.github/workflows/: build.yml
actions/actions/: Containerfile
actions/src/: main.rs
cli/: .build.json  Cargo.toml
cli/src/: cli.rs  config.rs  main.rs
cli/src/cli/: config.rs
lib/: Cargo.toml
lib-derive/: Cargo.toml
lib-derive/src/: lib.rs
lib/src/: errors.rs  lib.rs
web-server/: Cargo.toml
web-server/src/: main.rs  routes.rs
