[package]
name = "actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tokio = { version = "0.2", features = ["full"] }
ghactions = { version = "0.3" }



