[package]
name = "actions"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.9"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
ghactions = "0.4"
octocrab = "0.17"


