[package]
name = "chaeldar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/SergioBenitez/Rocket", features = ["tls", "mtls", "json"] }
tokio = { version = "1", features = ["full"] }

serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

log = { version = "0.4", features = ["std", "serde"] }
env_logger = "0.8.4"

